collapse padding issue resolved

--- a/resources/assets/scss/_orders.scss
+++ b/resources/assets/scss/_orders.scss
@@ -188,7 +188,7 @@
     .ordercollapse-trigger{
       padding: 5px 10px 5px 0;
     }
-    .collapse{
+    .my-order-collapse{
       border-top: 1px solid #e8e8e8;
       padding: 10px 8px;
     }
